fix gear too small

--- a/src/app/core/gear/gear.component.scss
+++ b/src/app/core/gear/gear.component.scss
@@ -1,7 +1,7 @@
 :host {
     display: flex;
     width: 100%;
-    height: calc(100% - 120px);
+    height: calc(100% - 30px);
     margin-top: 30px;
 }
 
